sample projects and sidenav section added

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <a href="#navbar" class="to-top"><i class="fas fa-arrow-up"></i></a>
 
     <!-- side nav -->
-    <div class="sidenav-container show" id="sidenavContainer">
+    <div class="sidenav-container" id="sidenavContainer">
         <div class="sidenav-content not-a-closer" id="sidenavContent">
           <i id="closeBtn" class="fas fa-times fa-2x"></i>
             <ul>
