sample projects and sidenav section added

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         <!-- RIGHT SIDE CONTENT: MAIN CV CONTENT -->
         <section class="right">
             <div id="biography" class="biography">
-                <h3>Biography</h3>
+                <h3>Summary</h3>
              <div>
                 <p>
-                    Self-taught Application Development Enthusiast specializing in <span>fullstack JavaScript application development</span>. Experienced with all stages of the development cycle for dynamic web projects. Versed in numerous programming languages including <span>C, Java with working knowledge of C++, PHP, Data Structures and Algorithm, and WordPress</span>.
+                    Hello, my name is Alieu Keita.I am 22 year old self-taught application developer  specializing in <span>fullstack JavaScript application development</span>. I am experienced with all stages of the development cycle for dynamic web projects with working knowledge in <span>C, C++, PHP, Python and WordPress</span>.
                 </p>
              </div>
             </div>
