--- a/index.html
+++ b/index.html
@@ -8,18 +8,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/me_passport.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <title>Alieu Keita</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Alieu Keita - Home</title>
 </head>
 <body>
 
     <!-- HEADER -->
     <div  id="navbar"></div>
     <nav>
-        <i class="fas fa-bars fa-2x toggle"></i>
+        <div class="nav-links">
+            <a href="" class="active">Home</a>
+            <a href="./pages/projects.html">Projects</a>
+            <a href="./pages/contact.html">Contact</a>
+        </div>
+        <div>
+            <i class="fas fa-bars fa-2x toggle"></i>
+        </div>
     </nav>
     <header id="header">
-        <div class="name">
+        <div class="header-title">
             <h2><span>Alieu</span> Keita</h2>
         </div>
     </header>
@@ -232,6 +239,6 @@
             </ul>
         </div>
     </div>
-<script src="app.js"></script>
+<script src="./js/app.js"></script>
 </body>
 </html>
