--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,6 +44,7 @@
     <!-- MAIN CONTENT -->
     <section>
       <form>
+        <div class="alert">Message sent</div>
         <!-- name -->
         <div class="name">
           <label for="name">Name</label>
