app complete for now

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -42,7 +42,206 @@
     </header>
 
     <!-- MAIN CONTENT -->
-    <main></main>
+    <main class="sample-project">
+      <!-- projects -->
+
+      <div id="projects" class="projects">
+        <!-- Should do -->
+        <div>
+          <a target="_blank" href="https://zen-villani-a0f4fc.netlify.app/">
+            <div>
+              <h4>SHOULD DO</h4>
+              <p>
+                A to-do list react application. That allows you to organized
+                tasks base on status
+              </p>
+              <h5>Technologies</h5>
+              <ul>
+                <li>React</li>
+                <li>Context API</li>
+                <li>Materialize Css</li>
+                <li>NodeJs: Routes</li>
+                <li>Mongo DB</li>
+              </ul>
+
+              <iframe
+                frameborder="0"
+                src="https://zen-villani-a0f4fc.netlify.app/"
+              >
+              </iframe>
+
+              <a
+                target="_blank"
+                class="view"
+                href="https://zen-villani-a0f4fc.netlify.app/"
+                >Demo <i class="fas fa-eye"></i
+              ></a>
+            </div>
+          </a>
+        </div>
+        <!-- Tyra blog -->
+        <div>
+          <a target="_blank" href="https://serene-ritchie-89d980.netlify.app/">
+            <div>
+              <h4>TYRA BANKS BLOGLIFE</h4>
+              <p>A static blog website detailing Tyra Banks life</p>
+              <h5>Technologies</h5>
+              <ul>
+                <li>HTML</li>
+                <li>CSS Grid and Flex</li>
+                <li>Sass</li>
+              </ul>
+
+              <iframe
+                frameborder="0"
+                src="https://serene-ritchie-89d980.netlify.app/"
+              >
+              </iframe>
+              <a
+                target="_blank"
+                class="view"
+                href="https://serene-ritchie-89d980.netlify.app/"
+                >Demo <i class="fas fa-eye"></i
+              ></a>
+            </div>
+          </a>
+        </div>
+
+        <!-- github finder -->
+        <div>
+          <a
+            target="_blank"
+            href="https://guserfinder-elsalavacion.netlify.app/"
+          >
+            <div>
+              <h4>GITHUB USER FINDER</h4>
+              <p>
+                A application that allows you to search and view github users
+                profile, repos, gists, followers, following.
+              </p>
+              <h5>Technologies</h5>
+              <ul>
+                <li>React</li>
+                <li>Context API</li>
+                <li>Bootstrap</li>
+                <li>Github API</li>
+              </ul>
+
+              <iframe
+                frameborder="0"
+                src="https://guserfinder-elsalavacion.netlify.app/"
+              >
+              </iframe>
+
+              <a
+                target="_blank"
+                class="view"
+                href="https://guserfinder-elsalavacion.netlify.app/"
+                >Demo <i class="fas fa-eye"></i
+              ></a>
+            </div>
+          </a>
+        </div>
+
+        <!-- Weatherme -->
+        <div>
+          <a target="_blank" href="https://tinyurl.com/wheatherme">
+            <div>
+              <h4>WEATHERME</h4>
+              <p>
+                A react weather application to tell the weather of your current
+                location and other location around the globe.
+              </p>
+              <h5>Technologies</h5>
+              <ul>
+                <li>React</li>
+                <li>Context API</li>
+                <li>HTML & CSS</li>
+                <li>Location API</li>
+                <li>Open Weather API</li>
+              </ul>
+
+              <iframe frameborder="0" src="https://tinyurl.com/wheatherme">
+              </iframe>
+
+              <a
+                target="_blank"
+                class="view"
+                href="https://tinyurl.com/wheatherme"
+                >Demo <i class="fas fa-eye"></i
+              ></a>
+            </div>
+          </a>
+        </div>
+
+        <!-- Temperature Converter -->
+        <div>
+          <a target="_blank" href="https://loving-jackson-6d1ce8.netlify.app/">
+            <div>
+              <h4>TEMPERATURE CONVERTER</h4>
+              <p>A two way temperature converter for celsius and fahrenheit.</p>
+              <h5>Technologies</h5>
+              <ul>
+                <li>React</li>
+                <li>Context API</li>
+                <li>Materialize CSS</li>
+              </ul>
+
+              <iframe
+                frameborder="0"
+                src="https://loving-jackson-6d1ce8.netlify.app/"
+              >
+              </iframe>
+
+              <a
+                target="_blank"
+                class="view"
+                href="https://loving-jackson-6d1ce8.netlify.app/"
+                >Demo <i class="fas fa-eye"></i
+              ></a>
+            </div>
+          </a>
+        </div>
+
+        <!-- Twitter login clone -->
+        <div>
+          <a
+            target="_blank"
+            href="https://hopeful-tereshkova-d56d1f.netlify.app/"
+          >
+            <div>
+              <h4>TWITTER LOGIN CLONE</h4>
+              <p>A static html css login using sass for twitter</p>
+              <h5>Technologies</h5>
+              <ul>
+                <li>HTML & CSS</li>
+                <li>CSS Grid & Flex</li>
+                <li>SASS</li>
+              </ul>
+
+              <iframe
+                frameborder="0"
+                src="https://hopeful-tereshkova-d56d1f.netlify.app/"
+              >
+              </iframe>
+
+              <a
+                target="_blank"
+                class="view"
+                href="https://hopeful-tereshkova-d56d1f.netlify.app/"
+                >Demo <i class="fas fa-eye"></i
+              ></a>
+            </div>
+          </a>
+        </div>
+      </div>
+      <a
+        class="github-repo"
+        target="_blank"
+        href="https://github.com/elsalvacion"
+        >Github Repo<i class="fab fa-github"></i
+      ></a>
+    </main>
 
     <!-- to top -->
     <a href="#navbar" class="to-top"><i class="fas fa-arrow-up"></i></a>
