cv updated ichat added

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -40,11 +40,13 @@
         <h2><span>Sample</span> Projects</h2>
       </div>
     </header>
-
+    <br />
+    <a class="github-repo" target="_blank" href="https://github.com/elsalvacion"
+      >Github Repo<i class="fab fa-github"></i
+    ></a>
     <!-- MAIN CONTENT -->
     <main class="sample-project">
       <!-- projects -->
-
       <div id="projects" class="projects">
         <!-- Should do -->
         <div>
@@ -76,6 +78,34 @@
                 href="https://zen-villani-a0f4fc.netlify.app/"
                 >Demo <i class="fas fa-eye"></i
               ></a>
+            </div>
+          </a>
+        </div>
+
+        <!-- iChat -->
+        <div>
+          <a target="_blank" href="https://i-chatapp.herokuapp.com/">
+            <div>
+              <h4>iChat</h4>
+              <p>A simple NodeJs chat app with few test rooms and channels</p>
+              <h5>Technologies</h5>
+              <ul>
+                <li>NodeJs</li>
+                <li>Socket IO</li>
+                <li>Materialize Css</li>
+                <li>NodeJs: Routes</li>
+                <li>Vanilla JavaScript</li>
+              </ul>
+
+              <iframe frameborder="0" src="https://i-chatapp.herokuapp.com/">
+              </iframe>
+
+              <a
+                target="_blank"
+                class="view"
+                href="https://i-chatapp.herokuapp.com/"
+                >View</a
+              >
             </div>
           </a>
         </div>
@@ -235,12 +265,6 @@
           </a>
         </div>
       </div>
-      <a
-        class="github-repo"
-        target="_blank"
-        href="https://github.com/elsalvacion"
-        >Github Repo<i class="fab fa-github"></i
-      ></a>
     </main>
 
     <!-- to top -->
