cv updated ichat added

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
             <!-- projects -->
             <div id="projects" class="projects">
                 <h3>Sample Projects</h3>
+    <a class="github-repo" target="_blank" href="https://github.com/elsalvacion"
+      >Github Repo<i class="fab fa-github"></i
+    ></a>
 
                          <!-- Should do -->
               <a target="_blank" href="https://zen-villani-a0f4fc.netlify.app/">
